<resources>
    <string name="app_name">Smart Calendar</string>

    <string name="timed_out">Время запроса истекло.</string>
    <string name="network_connection_lost">Прервано соединение с интернетом.</string>
    <string name="bad_server_response">Неверный ответ от сервера.</string>
    <string name="server_error">Непредвиденная ошибка на сервере.</string>
    <string name="try_again">Пожалуйста, попробуйте еще раз.</string>
    <string name="bad_connection">Не получилось загрузить изображение. Проверьте интернет соеденение</string>
    <string name="empty_fields">Обязательные поля не зполнены</string>
    <string name="unknown_error">Произошла неизвестная ошибка.</string>
    <string name="unknown_error_from_backend">Произошла ошибка на сервере. Пожалуйста, обновите приложение</string>

    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="jule">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>

    <string name="january_of">января</string>
    <string name="february_of">февраля</string>
    <string name="march_of">марта</string>
    <string name="april_of">апреля</string>
    <string name="may_of">мая</string>
    <string name="june_of">июня</string>
    <string name="jule_of">июля</string>
    <string name="august_of">августа</string>
    <string name="september_of">сентября</string>
    <string name="october_of">октября</string>
    <string name="november_of">ноября</string>
    <string name="december_of">декабря</string>

    <string name="birth_date">Дата рождения</string>
    <string name="sex">Пол</string>
    <string name="not_confirmed">(не подтверждена)</string>
    <string name="send">Отправить</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="not_given">Не задан</string>
    <string name="today">Сегодня</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>

    <string name="time_remain">%1$s д. %2$s:%3$s:%4$s</string>
    <string name="short_time_remain">%1$s:%2$s</string>
    <string name="short_date_remain">%1$s д. %2$s ч.</string>
    <string name="time_hms_remain">%1$s:%2$s:%3$s</string>
    <string name="short_day_remain">%1$s дней</string>

    <string name="default_network_error_message">Отсутствует соединение с интернетом.</string>
    <string name="default_unexpected_error_message">Неизвестная ошибка на сервере.</string>
    <string name="default_error_message">Ошибка cоединения с сервером.</string>

    <string name="cancel">Отмена</string>
    <string name="choose">Выбрать</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="user_not_found">Пользователь не найден!</string>

    <string name="notifications_admin_channel_name">notifications_admin_channel_name</string>
    <string name="notifications_admin_channel_description">notifications_admin_channel_description</string>

    <string name="authorization_warning">Авторизуясь, Вы соглашаетесь со следующими документами: </string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="user_name">Имя пользователя</string>
    <string name="username">Логин</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>

    <string name="usernameHint">Введите ваш E-Mail</string>
    <string name="passwordHint">Введите Ваш пароль</string>

    <string name="usernameHintRegister">Введите свой логин</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conditions">Условия и примечания</string>
    <string name="photogallery">Фотогалерея</string>
    <string name="common">Основное</string>
    <string name="next">Далее</string>
    <string name="sponsors_and_partners">Спонсоры и партнеры</string>
    <string name="schedule">Расписание</string>
    <string name="guests_and_participants">Гости и участники</string>
    <string name="extras">Дополнительно</string>
    <string name="categorization">Категоризация</string>
    <string name="create_event">Создать мероприятие</string>
    <string name="option_settings">Настройка опций</string>
    <string name="desired_options">Желаемые опции</string>
    <string name="publish">Опубликовать</string>
    <string name="categories">Категории</string>

    <string name="poll_status_active">Не пройден</string>
    <string name="poll_status_no_active">Пройден</string>

    <string name="i_will_join_title">Я пойду</string>
    <string name="my_events">Мои мероприятия</string>
    <string name="i_will_join">Я пойду!</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="do_register">Зарегистрироваться</string>
    <string name="confirm_password">Подтвердите пароль</string>
</resources>
