<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".modules.myevents.domain.SetExtrasFragment">

<!-- TODO: Update blank fragment layout -->
<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/extras" />

    <Button
        android:id="@+id/btn_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@null"
        />

    <Button
        android:id="@+id/btn_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guests_and_participants"
        app:layout_constraintTop_toBottomOf="@+id/btn_schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@null"
        />

    <Button
        android:id="@+id/btn_partners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sponsors_and_partners"
        app:layout_constraintTop_toBottomOf="@+id/btn_participants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@null"
        />

    <Button
        android:id="@+id/btn_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conditions"
        app:layout_constraintTop_toBottomOf="@+id/btn_partners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@null"
        />

    <Button
        android:id="@+id/btn_photogallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photogallery"
        app:layout_constraintTop_toBottomOf="@+id/btn_conditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@null"
        />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>