<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="user" type="kz.smart.calendar.models.requests.LoginRequestModel"/>
        <variable name="presenter" type="kz.smart.calendar.modules.settings.presentation.login.LoginProcessPresenter"/>
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.settings.view.login.LoginFragment"
        android:id="@+id/flMain">

<!--        <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    android:layout_marginEnd="14dp"
    android:layout_marginBottom="?android:attr/actionBarSize"
    android:fitsSystemWindows="true"
    >

     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         >

                    <TextView
                        android:id="@+id/appNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Smart\nCalendar"
                        android:textSize="38sp"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_marginLeft="14dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_weight="1"
            android:hint="@string/usernameHint"
            android:text="@={user.login}"
            android:textSize="12sp"
            android:background="@drawable/bg_rounded_login"
            android:paddingStart="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:ems="10"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            android:text="@={user.password}"
            android:textSize="12sp"
            android:background="@drawable/bg_rounded_login"
            android:layout_marginTop="14dp"
            android:paddingStart="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="262dp"
                android:layout_height="50dp"
                android:background="@drawable/button_black_bg"
                android:onClick="@{(v) -> presenter.loginClick()}"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/buttonTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="40dp"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
    </FrameLayout>
</layout>